Add/Remove component

--- a/ArgEngine.vcxproj
+++ b/ArgEngine.vcxproj
@@ -99,21 +99,31 @@
     <ClCompile Include="Libraries\Include\stb\stb_image.cpp" />
     <ClCompile Include="Source\Client\Client.cpp" />
     <ClCompile Include="Source\Core\Application.cpp" />
+    <ClCompile Include="Source\Core\GUID.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
     <ClCompile Include="Source\Editor\EditorWindow.cpp" />
-    <ClCompile Include="Source\Editor\Scene\SceneCreateObjectWidget.h" />
-    <ClCompile Include="Source\Gameplay\Scene\Components\Component.cpp" />
-    <ClCompile Include="Source\Gameplay\Scene\Components\StaticMeshComponent.cpp" />
-    <ClCompile Include="Source\Gameplay\Scene\Components\Transform.cpp" />
-    <ClCompile Include="Source\Gameplay\Scene\GameObject.cpp" />
+    <ClCompile Include="Source\Editor\GUI\EditorWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\SceneCreateObjectWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\SceneHierarchyWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\SceneManagementWidget.cpp" />
+    <ClCompile Include="Source\Editor\Inspector.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Inspector\InspectorWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\Component\ComponentWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\Component\StaticMeshComponentWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\TransformWidget.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Scene\SceneCreateObjectWidget.h" />
+    <ClCompile Include="Source\Gameplay\Scene\Component\Component.cpp" />
+    <ClCompile Include="Source\Gameplay\Scene\Component\StaticMeshComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\Scene\GameObject\Transform.cpp" />
+    <ClCompile Include="Source\Gameplay\Scene\GameObject\GameObject.cpp" />
     <ClCompile Include="Source\Gameplay\Scene\Scene.cpp" />
-    <ClCompile Include="Source\Input\GamepadState.cpp" />
-    <ClCompile Include="Source\Input\KeyboardState.cpp" />
-    <ClCompile Include="Source\Input\MouseState.cpp" />
-    <ClCompile Include="Source\Input\WindowInput.cpp" />
+    <ClCompile Include="Source\Core\Input\GamepadState.cpp" />
+    <ClCompile Include="Source\Core\Input\KeyboardState.cpp" />
+    <ClCompile Include="Source\Core\Input\MouseState.cpp" />
+    <ClCompile Include="Source\Core\Input\WindowInput.cpp" />
     <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Random\LCG.cpp" />
-    <ClCompile Include="Source\Random\Random.cpp" />
+    <ClCompile Include="Source\Core\Random\LCG.cpp" />
+    <ClCompile Include="Source\Core\Random\Random.cpp" />
     <ClCompile Include="Source\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="Source\Renderer\RenderAPI.cpp" />
     <ClCompile Include="Source\Renderer\Renderer.cpp" />
@@ -129,41 +139,42 @@
     <ClInclude Include="Libraries\Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Libraries\Include\imgui\imstb_truetype.h" />
     <ClInclude Include="Source\Core\Application.h" />
+    <ClInclude Include="Source\Core\GUID.h" />
     <ClInclude Include="Source\Debug\CoreLogger.h" />
-    <ClInclude Include="Source\Editor\EditorWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\EditorWidget.h" />
     <ClInclude Include="Source\Editor\EditorWindow.h" />
-    <ClInclude Include="Source\Editor\Inspector\Inpector.h" />
-    <ClInclude Include="Source\Editor\Inspector\InspectorWidget.h" />
-    <ClInclude Include="Source\Editor\Scene\Component\ComponentWidget.h" />
-    <ClInclude Include="Source\Editor\Scene\Component\StaticMeshComponentWidget.h" />
-    <ClInclude Include="Source\Editor\Scene\Component\TransformWidget.h" />
-    <ClInclude Include="Source\Editor\Scene\SceneHierarchyWidget.h" />
-    <ClInclude Include="Source\Editor\Scene\SceneManagementWidget.h" />
-    <ClInclude Include="Source\Gameplay\Scene\Components\Component.h" />
-    <ClInclude Include="Source\Gameplay\Scene\Components\StaticMeshComponent.h" />
-    <ClInclude Include="Source\Gameplay\Scene\Components\Transform.h" />
-    <ClInclude Include="Source\Gameplay\Scene\GameObject.h" />
+    <ClInclude Include="Source\Editor\Inspector.h" />
+    <ClInclude Include="Source\Editor\GUI\Inspector\InspectorWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\Scene\Component\ComponentWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\Scene\Component\StaticMeshComponentWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\Scene\TransformWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\Scene\SceneHierarchyWidget.h" />
+    <ClInclude Include="Source\Editor\GUI\Scene\SceneManagementWidget.h" />
+    <ClInclude Include="Source\Gameplay\Scene\Component\Component.h" />
+    <ClInclude Include="Source\Gameplay\Scene\Component\StaticMeshComponent.h" />
+    <ClInclude Include="Source\Gameplay\Scene\GameObject\Transform.h" />
+    <ClInclude Include="Source\Gameplay\Scene\GameObject\GameObject.h" />
     <ClInclude Include="Source\Gameplay\Scene\Scene.h" />
-    <ClInclude Include="Source\Input\CursorModes.h" />
-    <ClInclude Include="Source\Input\GamepadAxes.h" />
-    <ClInclude Include="Source\Input\GamepadButtons.h" />
-    <ClInclude Include="Source\Input\GamepadConstants.h" />
-    <ClInclude Include="Source\Input\GamepadState.h" />
-    <ClInclude Include="Source\Input\KeyboardState.h" />
-    <ClInclude Include="Source\Input\KeyCodes.h" />
+    <ClInclude Include="Source\Core\Input\CursorModes.h" />
+    <ClInclude Include="Source\Core\Input\GamepadAxes.h" />
+    <ClInclude Include="Source\Core\Input\GamepadButtons.h" />
+    <ClInclude Include="Source\Core\Input\GamepadConstants.h" />
+    <ClInclude Include="Source\Core\Input\GamepadState.h" />
+    <ClInclude Include="Source\Core\Input\KeyboardState.h" />
+    <ClInclude Include="Source\Core\Input\KeyCodes.h" />
     <ClInclude Include="Source\Core\Window.h" />
-    <ClInclude Include="Source\Input\MouseButtons.h" />
-    <ClInclude Include="Source\Input\MouseState.h" />
-    <ClInclude Include="Source\Input\WindowInput.h" />
-    <ClInclude Include="Source\Math\MathTypes.h" />
-    <ClInclude Include="Source\Memory\SmartPtr.h" />
-    <ClInclude Include="Source\Random\LCG.h" />
-    <ClInclude Include="Source\Random\Random.h" />
+    <ClInclude Include="Source\Core\Input\MouseButtons.h" />
+    <ClInclude Include="Source\Core\Input\MouseState.h" />
+    <ClInclude Include="Source\Core\Input\WindowInput.h" />
+    <ClInclude Include="Source\Core\Math\MathTypes.h" />
+    <ClInclude Include="Source\Core\Memory\SmartPtr.h" />
+    <ClInclude Include="Source\Core\Random\LCG.h" />
+    <ClInclude Include="Source\Core\Random\Random.h" />
     <ClInclude Include="Source\Renderer\GraphicsContext.h" />
     <ClInclude Include="Source\Renderer\RenderAPI.h" />
     <ClInclude Include="Source\Renderer\RenderContext.h" />
     <ClInclude Include="Source\Renderer\Renderer.h" />
-    <ClInclude Include="Source\Time\GameTime.h" />
+    <ClInclude Include="Source\Core\Time\GameTime.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
