--- a/ArgEngine.vcxproj
+++ b/ArgEngine.vcxproj
@@ -59,14 +59,14 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLFW_INCLUDE_NONE;AE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLFW_INCLUDE_NONE;YAML_CPP_STATIC_DEFINE;AE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;yaml-cppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -75,7 +75,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;GLFW_INCLUDE_NONE;AE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;GLFW_INCLUDE_NONE;YAML_CPP_STATIC_DEFINE;AE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -84,7 +84,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;yaml-cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -98,10 +98,14 @@
     <ClCompile Include="Libraries\Include\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Libraries\Include\stb\stb_image.cpp" />
     <ClCompile Include="Source\Client\Client.cpp" />
+    <ClCompile Include="Source\Core\Analytics\DebugTimer.cpp" />
     <ClCompile Include="Source\Core\Application.cpp" />
+    <ClCompile Include="Source\Core\File\FileReader.cpp" />
+    <ClCompile Include="Source\Core\File\FileWriter.cpp" />
     <ClCompile Include="Source\Core\GUID.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
     <ClCompile Include="Source\Editor\EditorWindow.cpp" />
+    <ClCompile Include="Source\Editor\GUI\Content\ContentBrowserWidget.cpp" />
     <ClCompile Include="Source\Editor\GUI\EditorWidget.cpp" />
     <ClCompile Include="Source\Editor\GUI\Scene\SceneCreateObjectWidget.cpp" />
     <ClCompile Include="Source\Editor\GUI\Scene\SceneHierarchyWidget.cpp" />
@@ -127,6 +131,10 @@
     <ClCompile Include="Source\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="Source\Renderer\RenderAPI.cpp" />
     <ClCompile Include="Source\Renderer\Renderer.cpp" />
+    <ClCompile Include="Source\Renderer\Texture\Texture.cpp" />
+    <ClCompile Include="Source\Resources\Content.cpp" />
+    <ClCompile Include="Source\Resources\Resource.cpp" />
+    <ClCompile Include="Source\Resources\ResourceTypes\TextureResource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libraries\Include\imgui\imconfig.h" />
@@ -138,9 +146,13 @@
     <ClInclude Include="Libraries\Include\imgui\imstb_rectpack.h" />
     <ClInclude Include="Libraries\Include\imgui\imstb_textedit.h" />
     <ClInclude Include="Libraries\Include\imgui\imstb_truetype.h" />
+    <ClInclude Include="Source\Core\Analytics\DebugTimer.h" />
     <ClInclude Include="Source\Core\Application.h" />
+    <ClInclude Include="Source\Core\File\FileReader.h" />
+    <ClInclude Include="Source\Core\File\FileWriter.h" />
     <ClInclude Include="Source\Core\GUID.h" />
     <ClInclude Include="Source\Debug\CoreLogger.h" />
+    <ClInclude Include="Source\Editor\GUI\Content\ContentBrowserWidget.h" />
     <ClInclude Include="Source\Editor\GUI\EditorWidget.h" />
     <ClInclude Include="Source\Editor\EditorWindow.h" />
     <ClInclude Include="Source\Editor\Inspector.h" />
@@ -170,11 +182,18 @@
     <ClInclude Include="Source\Core\Memory\SmartPtr.h" />
     <ClInclude Include="Source\Core\Random\LCG.h" />
     <ClInclude Include="Source\Core\Random\Random.h" />
+    <ClInclude Include="Source\Project\Project.h" />
     <ClInclude Include="Source\Renderer\GraphicsContext.h" />
     <ClInclude Include="Source\Renderer\RenderAPI.h" />
     <ClInclude Include="Source\Renderer\RenderContext.h" />
     <ClInclude Include="Source\Renderer\Renderer.h" />
     <ClInclude Include="Source\Core\Time\GameTime.h" />
+    <ClInclude Include="Source\Renderer\Texture\Texture.h" />
+    <ClInclude Include="Source\Renderer\Texture\TextureFormat.h" />
+    <ClInclude Include="Source\Resources\Content.h" />
+    <ClInclude Include="Source\Resources\Import\TextureImporter.h" />
+    <ClInclude Include="Source\Resources\Resource.h" />
+    <ClInclude Include="Source\Resources\ResourceTypes\TextureResource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
