--- a/ArgEditor/UserConfig/GUI.ini
+++ b/ArgEditor/UserConfig/GUI.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,981
-Size=2136,388
+Pos=0,692
+Size=1482,388
 Collapsed=0
 DockId=0x00000002,0
 
@@ -35,31 +35,37 @@ Collapsed=0
 Pos=0,24
 Size=1722,955
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Game]
 Pos=0,24
 Size=1722,955
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000008,1
 
 [Window][World Outliner]
-Pos=1724,24
-Size=412,955
+Pos=0,74
+Size=411,616
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Details]
-Pos=2138,24
-Size=422,1345
+Pos=1484,74
+Size=436,1006
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Resource]
-Pos=2138,24
-Size=422,1345
+Pos=1484,74
+Size=436,1006
 Collapsed=0
 DockId=0x0000000A,1
+
+[Window][Game View]
+Pos=413,74
+Size=1069,616
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xDF50FCAD,2]
 Column 0  Weight=0.3261
@@ -80,15 +86,15 @@ Column 0  Weight=0.4020
 Column 1  Weight=1.5980
 
 [Docking][Data]
-DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,24 Size=2560,1345 Split=X
-  DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=2136,1061 Split=X
+DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=1920,1006 Split=X
+  DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=1482,1061 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=1493,1345 Split=Y
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1920,955 Split=X
         DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=472,661 Selected=0x48EF358F
-        DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x9F27EDF6
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=1082,712 CentralNode=1 Selected=0x9F27EDF6
-          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=412,712 Selected=0x318D4478
+        DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x642CEEBB
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=411,616 Selected=0x318D4478
+          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1069,616 CentralNode=1 Selected=0x642CEEBB
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1920,388 Selected=0xBF096F38
     DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=425,1345 Selected=0xE8C841D3
-  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=422,1061 Selected=0xFC3EA205
+  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=436,1061 Selected=0xFCC54B13
 
