--- a/ArgEditor/UserConfig/GUI.ini
+++ b/ArgEditor/UserConfig/GUI.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,692
-Size=1482,388
+Pos=0,981
+Size=2122,388
 Collapsed=0
 DockId=0x00000002,0
 
@@ -45,27 +45,33 @@ DockId=0x00000008,1
 
 [Window][World Outliner]
 Pos=0,74
-Size=411,616
+Size=418,905
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Details]
-Pos=1484,74
-Size=436,1006
+Pos=2124,74
+Size=436,1295
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Resource]
-Pos=1484,74
-Size=436,1006
+Pos=2124,74
+Size=436,1295
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Game View]
-Pos=413,74
-Size=1069,616
+Pos=420,74
+Size=1702,905
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][World Settings]
+Pos=0,74
+Size=418,905
+Collapsed=0
+DockId=0x00000007,1
 
 [Table][0xDF50FCAD,2]
 Column 0  Weight=0.3261
@@ -86,15 +92,15 @@ Column 0  Weight=0.4020
 Column 1  Weight=1.5980
 
 [Docking][Data]
-DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=1920,1006 Split=X
+DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=2560,1295 Split=X
   DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=1482,1061 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=1493,1345 Split=Y
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1920,955 Split=X
         DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=472,661 Selected=0x48EF358F
         DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x642CEEBB
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=411,616 Selected=0x318D4478
-          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1069,616 CentralNode=1 Selected=0x642CEEBB
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=418,616 Selected=0x318D4478
+          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1062,616 CentralNode=1 Selected=0x642CEEBB
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1920,388 Selected=0xBF096F38
     DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=425,1345 Selected=0xE8C841D3
-  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=436,1061 Selected=0xFCC54B13
+  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=436,1061 Selected=0xFC3EA205
 
