--- a/ArgEditor/UserConfig/GUI.ini
+++ b/ArgEditor/UserConfig/GUI.ini
@@ -22,7 +22,7 @@ DockId=0x00000005,0
 
 [Window][Content Browser]
 Pos=0,981
-Size=2122,388
+Size=2105,388
 Collapsed=0
 DockId=0x00000002,0
 
@@ -50,20 +50,20 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Details]
-Pos=2124,74
-Size=436,1295
+Pos=2107,74
+Size=453,1295
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Resource]
-Pos=2124,74
-Size=436,1295
+Pos=2107,74
+Size=453,1295
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Game View]
 Pos=420,74
-Size=1702,905
+Size=1685,905
 Collapsed=0
 DockId=0x00000008,0
 
@@ -93,14 +93,14 @@ Column 1  Weight=1.5980
 
 [Docking][Data]
 DockSpace           ID=0x2B7EA37D Window=0x995B0CF8 Pos=0,74 Size=2560,1295 Split=X
-  DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=1482,1061 Split=X
+  DockNode          ID=0x00000009 Parent=0x2B7EA37D SizeRef=2105,1061 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=1493,1345 Split=Y
       DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=1920,955 Split=X
         DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=472,661 Selected=0x48EF358F
         DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1024,661 Split=X Selected=0x642CEEBB
-          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=418,616 Selected=0x318D4478
-          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1062,616 CentralNode=1 Selected=0x642CEEBB
+          DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=418,616 Selected=0xF1D9481C
+          DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=1685,616 CentralNode=1 Selected=0x642CEEBB
       DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1920,388 Selected=0xBF096F38
     DockNode        ID=0x00000004 Parent=0x00000009 SizeRef=425,1345 Selected=0xE8C841D3
-  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=436,1061 Selected=0xFC3EA205
+  DockNode          ID=0x0000000A Parent=0x2B7EA37D SizeRef=453,1061 Selected=0xFC3EA205
 
