--- a/ArgEngine/ArgEngine.vcxproj
+++ b/ArgEngine/ArgEngine.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Source\Content\Import\ImporterDataConversion.cpp" />
     <ClCompile Include="Source\Content\Import\SkeletalAnimationImporter.cpp" />
     <ClCompile Include="Source\Content\Import\SkeletalMeshImporter.cpp" />
+    <ClCompile Include="Source\Content\Import\SkeletalModelImporter.cpp" />
     <ClCompile Include="Source\Content\Import\SkeletonImporter.cpp" />
     <ClCompile Include="Source\Content\Import\StaticModelImporter.cpp" />
     <ClCompile Include="Source\Content\Import\TextureImporter.cpp" />
@@ -127,6 +128,9 @@
     <ClCompile Include="Source\Content\Resource\GameResources\GameDataResource.cpp" />
     <ClCompile Include="Source\Content\Resource\GameResources\MaterialResource.cpp" />
     <ClCompile Include="Source\Content\Resource\GameResources\ShaderResource.cpp" />
+    <ClCompile Include="Source\Content\Resource\GameResources\SkeletalAnimationResource.cpp" />
+    <ClCompile Include="Source\Content\Resource\GameResources\SkeletalModelResource.cpp" />
+    <ClCompile Include="Source\Content\Resource\GameResources\SkeletonResource.cpp" />
     <ClCompile Include="Source\Content\Resource\GameResources\StaticModelResource.cpp" />
     <ClCompile Include="Source\Content\Resource\GameResources\WorldResource.cpp" />
     <ClCompile Include="Source\Content\Resource\Resource.cpp" />
@@ -140,10 +144,13 @@
     <ClCompile Include="Source\Gameplay\World\Actor\Component\ActorComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\ComponentRegistry.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\PointLightComponent.cpp" />
+    <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\SkeletalModelComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\SpotLightComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Component\Components\StaticModelComponent.cpp" />
     <ClCompile Include="Source\Gameplay\World\Actor\Transform.cpp" />
     <ClCompile Include="Source\Gameplay\World\GameWorld.cpp" />
+    <ClCompile Include="Source\Renderer\Animation\SkeletalAnimation.cpp" />
+    <ClCompile Include="Source\Renderer\Animation\Skeleton.cpp" />
     <ClCompile Include="Source\Renderer\Buffers.cpp" />
     <ClCompile Include="Source\Renderer\Camera\Camera.cpp" />
     <ClCompile Include="Source\Renderer\Camera\OrthoCamera.cpp" />
@@ -159,6 +166,7 @@
     <ClCompile Include="Source\Renderer\RenderTarget.cpp" />
     <ClCompile Include="Source\Renderer\ShaderProgram.cpp" />
     <ClCompile Include="Source\Renderer\SkeletalMesh.cpp" />
+    <ClCompile Include="Source\Renderer\SkeletalModel.cpp" />
     <ClCompile Include="Source\Renderer\StaticMesh.cpp" />
     <ClCompile Include="Source\Renderer\StaticModel.cpp" />
     <ClCompile Include="Source\Renderer\Texture.cpp" />
@@ -168,8 +176,10 @@
     <ClCompile Include="Source\Script\ScriptGlue\ScriptGlueGameplay.cpp" />
     <ClInclude Include="Source\Content\Content.hpp" />
     <ClInclude Include="Source\Content\Import\ImporterDataConversion.hpp" />
+    <ClInclude Include="Source\Content\Import\IResourceImporter.hpp" />
     <ClInclude Include="Source\Content\Import\SkeletalAnimationImporter.hpp" />
     <ClInclude Include="Source\Content\Import\SkeletalMeshImporter.hpp" />
+    <ClInclude Include="Source\Content\Import\SkeletalModelImporter.hpp" />
     <ClInclude Include="Source\Content\Import\SkeletonImporter.hpp" />
     <ClInclude Include="Source\Content\Import\StaticModelImporter.hpp" />
     <ClInclude Include="Source\Content\Import\TextureImporter.hpp" />
@@ -178,6 +188,9 @@
     <ClInclude Include="Source\Content\Resource\GameResources\GameDataResource.hpp" />
     <ClInclude Include="Source\Content\Resource\GameResources\MaterialResource.hpp" />
     <ClInclude Include="Source\Content\Resource\GameResources\ShaderResource.hpp" />
+    <ClInclude Include="Source\Content\Resource\GameResources\SkeletalAnimationResource.hpp" />
+    <ClInclude Include="Source\Content\Resource\GameResources\SkeletalModelResource.hpp" />
+    <ClInclude Include="Source\Content\Resource\GameResources\SkeletonResource.hpp" />
     <ClInclude Include="Source\Content\Resource\GameResources\StaticModelResource.hpp" />
     <ClInclude Include="Source\Content\Resource\GameResources\WorldResource.hpp" />
     <ClInclude Include="Source\Content\Resource\ResourceFolder.hpp" />
@@ -213,6 +226,7 @@
     <ClInclude Include="Source\Gameplay\World\Actor\Component\ActorComponentHandle.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\ComponentRegistry.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\PointLightComponent.hpp" />
+    <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\SkeletalModelComponent.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\SpotLightComponent.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Component\Components\StaticModelComponent.hpp" />
     <ClInclude Include="Source\Gameplay\World\Actor\Transform.hpp" />
@@ -234,6 +248,7 @@
     <ClInclude Include="Source\Renderer\RenderAPI.hpp" />
     <ClInclude Include="Source\Renderer\Renderer.hpp" />
     <ClInclude Include="Source\Renderer\ShaderProgram.hpp" />
+    <ClInclude Include="Source\Renderer\SkeletalModel.hpp" />
     <ClInclude Include="Source\Renderer\StaticMesh.hpp" />
     <ClInclude Include="Source\Renderer\StaticModel.hpp" />
     <ClInclude Include="Source\Renderer\Texture.hpp" />
